--- a/index.html
+++ b/index.html
@@ -471,10 +471,20 @@
             </li>
           </ul>
         </div>
+        <div class="container-form">
+          <p class="paragraph-footer-Subscribe">Subscribe</p>
+          <form class="footer-form">
+            <label class="label-email-footer" for="email">
+            <input class="input-email-footer" name="input-email" type="email" placeholder="E-mail">
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
-      <div class="modal"></div>
+    <!--modal-->
+    <!--is-open-->
+    <div class="backdrop">
+      <div class="modal">
     </div>
   </body>
 </html>
