--- a/index.html
+++ b/index.html
@@ -472,11 +472,12 @@
           </ul>
         </div>
         <div class="container-form">
-          <p class="paragraph-footer-Subscribe">Subscribe</p>
+          <p class="paragraph-footer-subscribe">Subscribe</p>
           <form class="footer-form">
             <label class="label-email-footer" for="email">
             <input class="input-email-footer" name="input-email" type="email" placeholder="E-mail">
             </label>
+            <button class="button-footer" type="submit">Subscribe</button>
           </form>
         </div>
       </div>
