--- a/index.html
+++ b/index.html
@@ -475,7 +475,13 @@
           <p class="paragraph-footer-subscribe">Subscribe</p>
           <form class="footer-form">
             <label class="label-email-footer" for="email">
-            <input class="input-email-footer" name="input-email" type="email" placeholder="E-mail">
+              <input
+                class="input-email-footer"
+                id="email"
+                name="input-email"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
             <button class="button-footer" type="submit">Subscribe</button>
           </form>
@@ -485,7 +491,7 @@
     <!--modal-->
     <!--is-open-->
     <div class="backdrop">
-      <div class="modal">
+      <div class="modal"></div>
     </div>
   </body>
 </html>
