--- a/index.html
+++ b/index.html
@@ -483,7 +483,12 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="button-footer" type="submit">Subscribe</button>
+            <button class="button-footer" type="submit">
+              Subscribe
+              <svg class="icon-frame" width="24" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
