--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <button class="button-footer" type="submit">
               Subscribe
               <svg class="icon-frame" width="24" height="24">
-                <use href=".//images/icons.svg#icon-Frame-3"></use>
+                <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
           </form>
