--- a/index.html
+++ b/index.html
@@ -484,9 +484,8 @@
               />
             </label>
             <button class="button-footer" type="submit">
-              Subscribe
-              <svg class="icon-frame" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame-3"></use>
+              Subscribe<svg class="icon-frame" width="24" height="20">
+                <use href="./images/icons.svg#icon-frame"></use>
               </svg>
             </button>
           </form>
