--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </div>
     </footer>
     <!--modal-->
-    <!--is-open-->
+    <!--is-open (on,off)-->
     <div class="backdrop">
       <div class="modal"></div>
     </div>
