--- a/index.html
+++ b/index.html
@@ -494,8 +494,10 @@
     </footer>
     <!--modal-->
     <!--is-open (on,off)-->
-    <div class="backdrop">
-      <div class="modal"></div>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="btn-modal" type="button">X</button>
+      </div>
     </div>
   </body>
 </html>
