--- a/index.html
+++ b/index.html
@@ -492,11 +492,16 @@
         </div>
       </div>
     </footer>
-    <!--modal-->
+    <!--modal--icon-modal-close-->
     <!--is-open (on,off)-->
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="btn-modal" type="button">X</button>
+        <button class="btn-modal" type="button">
+          <svg class="icon-modal-close" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="title-model">Leave your contacts and we will call you back</p>
       </div>
     </div>
   </body>
