--- a/index.html
+++ b/index.html
@@ -502,6 +502,35 @@
           </svg>
         </button>
         <p class="title-model">Leave your contacts and we will call you back</p>
+        <form class="form-modal">
+          <div class="form-contacts">
+            <label for="name">Name</label>
+            <input type="text" name="" id="name" />
+          </div>
+          <div class="form-contacts">
+            <label for="phone">Phone</label>
+            <input type="tel" name="" id="phone" />
+          </div>
+          <div class="form-contacts">
+            <label for="email">email</label>
+            <input type="email" name="" id="email" />
+          </div>
+          <div class="form-contacts">
+            <label for="comment">Comment</label>
+            <textarea
+              name="comment"
+              id="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-contacts">
+            <input type="checkbox" />
+            <label for=""
+              >I accept the terms and conditions of the
+              <a class="link-form" href="">Privacy Policy</a></label
+            >
+          </div>
+        </form>
       </div>
     </div>
   </body>
