--- a/index.html
+++ b/index.html
@@ -504,20 +504,21 @@
         <p class="title-model">Leave your contacts and we will call you back</p>
         <form class="form-modal">
           <div class="form-contacts">
-            <label for="name">Name</label>
-            <input type="text" name="" id="name" />
+            <label class="label-form">Name</label>
+            <input class="input-form" type="text" name="" id="user-name" />
           </div>
           <div class="form-contacts">
-            <label for="phone">Phone</label>
-            <input type="tel" name="" id="phone" />
+            <label class="label-form">Phone</label>
+            <input class="input-form" type="tel" name="" id="phone" />
           </div>
           <div class="form-contacts">
-            <label for="email">email</label>
-            <input type="email" name="" id="email" />
+            <label class="label-form">Email</label>
+            <input class="input-form" type="email" name="" id="email" />
           </div>
           <div class="form-contacts">
-            <label for="comment">Comment</label>
+            <label class="label-form">Comment</label>
             <textarea
+              class="textarea-form"
               name="comment"
               id="comment"
               placeholder="Text input"
@@ -525,10 +526,13 @@
           </div>
           <div class="form-contacts">
             <input type="checkbox" />
-            <label for=""
+            <label
               >I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
+          </div>
+          <div>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
