--- a/index.html
+++ b/index.html
@@ -504,15 +504,15 @@
         <p class="title-model">Leave your contacts and we will call you back</p>
         <form class="form-modal">
           <div class="form-contacts">
-            <label class="label-form">Name</label>
+            <label class="label-form" for="user-name">Name</label>
             <input class="input-form" type="text" name="" id="user-name" />
           </div>
           <div class="form-contacts">
-            <label class="label-form">Phone</label>
+            <label class="label-form" for="phone">Phone</label>
             <input class="input-form" type="tel" name="" id="phone" />
           </div>
           <div class="form-contacts">
-            <label class="label-form">Email</label>
+            <label class="label-form" for="email">Email</label>
             <input class="input-form" type="email" name="" id="email" />
           </div>
           <div class="form-contacts">
