--- a/index.html
+++ b/index.html
@@ -505,15 +505,15 @@
         <form class="form-modal">
           <div class="form-contacts">
             <label class="label-form" for="user-name">Name</label>
-            <input class="input-form" type="text" name="" id="user-name" />
+            <input class="input-form" type="text" name="name" id="user-name" />
           </div>
           <div class="form-contacts">
             <label class="label-form" for="phone">Phone</label>
-            <input class="input-form" type="tel" name="" id="phone" />
+            <input class="input-form" type="tel" name="phone" id="phone" />
           </div>
           <div class="form-contacts">
             <label class="label-form" for="email">Email</label>
-            <input class="input-form" type="email" name="" id="email" />
+            <input class="input-form" type="email" name="email" id="email" />
           </div>
           <div class="form-contacts">
             <label class="label-form">Comment</label>
