--- a/index.html
+++ b/index.html
@@ -512,8 +512,13 @@
             <input class="input-form" type="tel" name="phone" id="phone" />
           </div>
           <div class="form-contacts">
-            <label class="label-form" for="email">Email</label>
-            <input class="input-form" type="email" name="email" id="email" />
+            <label class="label-form" for="email-form">Email</label>
+            <input
+              class="input-form"
+              type="email"
+              name="email"
+              id="email-form"
+            />
           </div>
           <div class="form-contacts">
             <label class="label-form">Comment</label>
