--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             />
           </div>
           <div class="form-contacts">
-            <label class="label-form">Comment</label>
+            <label class="label-form" for="comment">Comment</label>
             <textarea
               class="textarea-form"
               name="comment"
@@ -537,7 +537,7 @@
             >
           </div>
           <div>
-            <button type="submit">Submit</button>
+            <button class="btn-form-cobmit" type="submit">Submit</button>
           </div>
         </form>
       </div>
