--- a/index.html
+++ b/index.html
@@ -531,13 +531,13 @@
           </div>
           <div class="form-contacts">
             <input type="checkbox" />
-            <label
+            <label class="label-chekbox"
               >I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
           </div>
           <div>
-            <button class="btn-form-cobmit" type="submit">Submit</button>
+            <button class="btn-form-cobmit" type="submit">Send</button>
           </div>
         </form>
       </div>
