--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         </div>
       </div>
     </footer>
-    <!--modal--icon-modal-close-->
+    <!--modal-->
     <!--is-open (on,off)-->
     <div class="backdrop is-open">
       <div class="modal">
@@ -523,15 +523,20 @@
           <div class="form-contacts">
             <label class="label-form" for="comment">Comment</label>
             <textarea
+              id="comment"
               class="textarea-form"
               name="comment"
-              id="comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="form-contacts">
-            <input type="checkbox" />
-            <label class="label-chekbox"
+            <input
+              class="input-checkbox"
+              type="checkbox"
+              name="checkbox"
+              id="checkbox"
+            />
+            <label class="label-chekbox" for="checkbox"
               >I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
