--- a/index.html
+++ b/index.html
@@ -505,20 +505,40 @@
         <form class="form-modal">
           <div class="form-contacts">
             <label class="label-form" for="user-name">Name</label>
-            <input class="input-form" type="text" name="name" id="user-name" />
+            <div class="input-svg-form">
+              <input
+                class="input-form"
+                type="text"
+                name="name"
+                id="user-name"
+              />
+              <svg class="icons-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-contacts">
             <label class="label-form" for="phone">Phone</label>
-            <input class="input-form" type="tel" name="phone" id="phone" />
+            <div class="input-svg-form">
+              <input class="input-form" type="tel" name="phone" id="phone" />
+              <svg class="icons-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-contacts">
             <label class="label-form" for="email-form">Email</label>
-            <input
-              class="input-form"
-              type="email"
-              name="email"
-              id="email-form"
-            />
+            <div class="input-svg-form">
+              <input
+                class="input-form"
+                type="email"
+                name="email"
+                id="email-form"
+              />
+              <svg class="icons-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-contacts">
             <label class="label-form" for="comment">Comment</label>
@@ -542,7 +562,7 @@
             >
           </div>
           <div>
-            <button class="btn-form-cobmit" type="submit">Send</button>
+            <button class="btn-form-sobmit" type="submit">Send</button>
           </div>
         </form>
       </div>
