--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               <input
                 class="input-form"
                 type="text"
-                name="name"
+                name="user-name"
                 id="user-name"
               />
               <svg class="icons-form" width="18" height="24">
