--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
             </div>
           </div>
           <div class="form-contacts">
-            <label class="label-form" for="comment">Comment</label>
+            <label class="label-form" for="user-comment">Comment</label>
             <textarea
-              id="comment"
+              id="user-comment"
               class="textarea-form"
-              name="comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
