--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-contacts">
+          <div class="form-contacts-textarea">
             <label class="label-form" for="user-comment">Comment</label>
             <textarea
               id="user-comment"
@@ -549,7 +549,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="form-contacts">
+          <div class="form-contacts-checkbox">
             <input
               class="input-checkbox"
               type="checkbox"
@@ -561,7 +561,7 @@
               <a class="link-form" href="">Privacy Policy</a></label
             >
           </div>
-          <div>
+          <div class="btn-form-send">
             <button class="btn-form-sobmit" type="submit">Send</button>
           </div>
         </form>
