--- a/index.html
+++ b/index.html
@@ -553,10 +553,11 @@
             <input
               class="input-checkbox"
               type="checkbox"
-              name="checkbox"
-              id="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label class="label-chekbox" for="checkbox"
+            <label class="label-chekbox" for="user-privacy"
               >I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
