--- a/index.html
+++ b/index.html
@@ -551,14 +551,19 @@
           </div>
           <div class="form-contacts-checkbox">
             <input
-              class="input-checkbox"
+              class="form-checkbox visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
             />
-            <label class="label-chekbox" for="user-privacy"
-              >I accept the terms and conditions of the
+            <label class="label-chekbox" for="user-privacy">
+              <span class="form-custom-checkbox">
+                <svg class="icons-form-checkbox" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
           </div>
