--- a/index.html
+++ b/index.html
@@ -566,10 +566,9 @@
               I accept the terms and conditions of the
               <a class="link-form" href="">Privacy Policy</a></label
             >
-          </div>
-          <div class="btn-form-send">
             <button class="btn-form-sobmit" type="submit">Send</button>
           </div>
+          <div class="btn-form-send"></div>
         </form>
       </div>
     </div>
