--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     </footer>
     <!--modal-->
     <!--is-open (on,off)-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="btn-modal" type="button">
           <svg class="icon-modal-close" width="8" height="8">
